--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,7 +23,7 @@ jobs:
       - uses: docker/metadata-action@v5
         id: metadata
         with:
-          images: ghcr.io/${{ github.repository }}/__service__
+          images: ghcr.io/${{ github.repository }}
       - uses: docker/setup-buildx-action@v3
       - uses: docker/bake-action@v5
         with:
