--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,10 +23,11 @@ jobs:
       - uses: docker/metadata-action@v5
         id: metadata
         with:
-          images: ghcr.io/${{ github.repository }}
+          images: ghcr.io/${{ github.repository }}/__service__
       - uses: docker/setup-buildx-action@v3
       - uses: docker/bake-action@v5
         with:
+          push: true
           files: |
             ./docker-bake.hcl
             ${{ steps.metadata.outputs.bake-file }}
