--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,6 +24,8 @@ jobs:
         id: metadata
       - uses: docker/setup-buildx-action@v3
       - uses: docker/bake-action@v5
+        env:
+          TAG_BASE: ghcr.io/${{ github.repository }}
         with:
           push: true
           files: |
