--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -51,3 +51,4 @@ jobs:
               const uri = `${image}@${digest}`
               core.info(`${service}=${uri}`)
             }
+      - run: kustomize build
